# vanishing-point-detection

./: CMakeLists.txt  README.md  build.sh
resource/datasets/eurasiancities/: gt_data.yml
resource/datasets/yorkurban/: gt_data.yml
resource/yud_dataset/: vpd_gt.yml
src/: CMakeLists.txt  TimeCountTools.hpp  VanishingPointDetection.hpp  VanishingPointDetectionEvaluation.cpp  VanishingPointDetectionEvaluation.hpp  VanishingPointDetectionTools.cpp  VanishingPointDetectionTools.hpp
src/line_detectors/: CMakeLists.txt  LineSegmentDetector.hpp  aLSD.cpp  aLSD.hpp
src/line_detectors/aLSD/: CMakeLists.txt  lsd.c
src/vp_detectors/: CMakeLists.txt  VanishingPointDetection.hpp  VanishingPointDetectionEvaluation.cpp  VanishingPointDetectionEvaluation.hpp  VanishingPointDetectionTools.cpp  VanishingPointDetectionTools.hpp
src/vp_detectors/RCSCfMIoMW/: CMakeLists.txt  RCSCfMIoMW.cpp  RCSCfMIoMW.hpp  Tools.cpp  Tools.hpp
test/: CMakeLists.txt  LineSegmentDetection_aLSD_test.cpp  VPDetector_RCSCfMIoMW_Tools_test.cpp  VanishingPointDetectionEvaluation_test.cpp  VanishingPointDetectionTools_test.cpp  VanishingPointDetection_test.cpp
